--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,10 @@ dependencies {
     //Coil
     implementation 'io.coil-kt:coil:1.3.2'
 
+    //pagination
+    def paging_version = "3.1.1"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
 
 
 
