--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
     id 'androidx.navigation.safeargs' version '2.4.2' apply false
+    //google services
+    id("com.google.gms.google-services") version "4.4.0" apply false
+
 }
