--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,10 +89,10 @@ dependencies {
     implementation "androidx.paging:paging-runtime:$paging_version"
 
     //firabase
-    implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
-    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation(platform"com.google.firebase:firebase-bom:32.3.1")
+    implementation"com.google.firebase:firebase-analytics-ktx"
 
-    implementation("com.google.firebase:firebase-auth-ktx")
+    implementation"com.google.firebase:firebase-auth-ktx"
     implementation"com.google.android.gms:play-services-auth:20.7.0"
 
 
