--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,10 @@ dependencies {
     implementation"com.google.firebase:firebase-auth-ktx"
     implementation"com.google.android.gms:play-services-auth:20.7.0"
 
+    //Splash Screen
+    implementation "androidx.core:core-splashscreen:1.0.1"
+
+
 
 
 
